:lipstick: Fix overflow caused by code snippets

--- a/frontend/scss/components/molecules/code-snippet.scss
+++ b/frontend/scss/components/molecules/code-snippet.scss
@@ -48,7 +48,7 @@ Styles taken and combined from: https://raw.githubusercontent.com/richleland/pyg
 
   pre, code {
     @include txt-mono;
-    white-space: pre-wrap;
+    white-space: pre;
     font-size: 0.9rem;
 	  padding: unset;
 	  word-break: initial;
